--- a/MakersDefense/MakersDefense/MakersDefense.csproj
+++ b/MakersDefense/MakersDefense/MakersDefense.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Invader.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Path.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tower.cs" />
   </ItemGroup>
