Add Exception class

--- a/MakersDefense/MakersDefense/MakersDefense.csproj
+++ b/MakersDefense/MakersDefense/MakersDefense.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exception.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Invader.cs" />
     <Compile Include="Map.cs" />
