Add Level class

--- a/MakersDefense/MakersDefense/MakersDefense.csproj
+++ b/MakersDefense/MakersDefense/MakersDefense.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Exception.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Invader.cs" />
+    <Compile Include="Level.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapLocation.cs" />
     <Compile Include="Path.cs" />
